--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body, html {
-            margin: 40;
+            margin: 40px;
             padding: 20%;
-            height: 100%;
             background: #000;
             display: flex;
             justify-content: center;
