--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         .hidden { display: none; }
         #aboutModal { backdrop-filter: blur(5px); background: rgba(0,0,0,0.85); }
         .glitch-char { display: inline-block; width: 1ch; }
+        /* Styling for the reply link */
+.reply-link {
+    font-size: 10px;
+    color: #444;
+    text-decoration: underline;
+    margin-top: 10px;
+    letter-spacing: 2px;
+    transition: color 0.3s;
+}
+.reply-link:hover { color: #00ff00;
     </style>
 </head>
 <body class="p-4 relative">
