--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
             <div id="inputSection"><textarea id="typingInput" rows="2" placeholder="> ENTER PAYLOAD..."></textarea></div>
             <div id="outputSection" class="hidden text-center">
     <textarea id="decryptedOutput" rows="2" readonly></textarea>
-    <a href="https://Gas-lighting.com" class="reply-link block uppercase">
-        [ Initiate New Transmission ]
+    <a href="https://musha1140.github.io" class="reply-link block uppercase">
+        [ Initiate New Encrpytion ]
     </a>
 </div>
             <div id="dropArea" class="w-full h-20 rounded flex flex-col items-center justify-center cursor-pointer relative bg-black border border-dashed border-gray-700 hover:border-green-500 transition-colors">
